--- a/css/agenda.css
+++ b/css/agenda.css
@@ -2,11 +2,12 @@
 table {
     border-collapse: collapse;
     width: 100%;
+    border: 2px green;
 }
 
 th, td {
     text-align: left;
-    padding: 8px;
+    padding: 20px;
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
